# chatsky-llm-autoconfig

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ask_llm.py  dff.json  examples_of_dialogues.json  metric_calculation.ipynb  metrics.csv  pyproject.toml  remade_dialogue_routes.json  sample_dialogue.py  sampled_dialogues.json  test.ipynb  test_classes.py  types_of_dialogues.json
.github/workflows/: codestyle.yml  documentation.yml  metrics.yml  tests.yml
data/: README.md  cycles.json  data.json  dialogues.json  graphs.json  sampled_graphs.json  theme_graph.json  theme_sampled_graph.json
dataset/: theme_graph.json  theme_sampled_graph.json
dev_packages/: pyproject.toml  test.ipynb
dev_packages/chatsky_llm_autoconfig/: pyproject.toml
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/: 1.env  algorithms.py  dialogue.py  evaluate.py  graph.py  model.py  pipeline.py  prompts.py  sample_dialogue.py  schemas.py  utils.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/algorithms/: base.py  dialogue_augmentation.py  dialogue_generation.py  graph_generation.py  multiple_graph_generation.py  single_graph_generation.py  topic_graph_generation.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/: registry.py  run_autometrics.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/results/: results.json
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/test_data/: data.json  insurance.json  internet_installation_setup.json  lists.json  old_data.json  options.json  saved.json  saved_5=6.json  saved_6+6=12.json  saved_all.json  saved_doubled.json  saved_duplicates.json  saved_equal.json  saved_internet_installation_1.json  saved_match?.json  saved_on_short2.json  short_hotel.json
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/metrics/: automatic_metrics.py  embedder.py  graph_metrics.py  jaccard.py  llm_metrics.py  test.ipynb  tests.py  triplet_matching.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/metrics/test_cases/: test_complex_graph.json
dev_packages/llm_autoconfig/: pyproject.toml
dev_packages/llm_autoconfig/llm_autoconfig/: evaluate.py  sample_dialogue.py
dev_packages/llm_autoconfig/llm_autoconfig/metrics/: triplet_matching.py
docs/source/: conf.py
experiments/: dialog-sampling.ipynb  experiment_logging.ipynb  report_template.md
experiments/2024.09.29_prompting/: report.md
experiments/2024.10.01_synthetic_data/: evaluate_functions.py  generate_dialogues.py  prompt.txt  report.md
experiments/2024.10.06_synthetic_data_based_on_existing_graphs/: augmented_graphs.json  average_graph_vis_test.py  dataset_generation.py  dialogue_graph_pairs.json  gen_data.ipynb  prompt_v1.txt  prompt_v2.txt  raw_data.json  report.md  scores.json
experiments/2024.10.15_visualisation/: visualise_graphs.ipynb
experiments/2024.10.20_dialog_graph_synthesis/: dialog_graph_synthesis.ipynb  report.md  task.md
experiments/2024.11.13_dialog_graph_generation/: dialog_graph_gen.ipynb  task.md
experiments/2024.11.14_dialogue2graph/: report.md  (+1 more)
graph_complement/: complement_runs.ipynb
graph_construction/: construction_from_scratch_runs.ipynb
graph_src/: graph.py  sample_dialogue.py  utils_functions.py
llm_autoconfig/: graph.py  model.py  utils.py
matching/: graph.py  ground_truth_graph.json  matching_algo.ipynb  metric_calc.py  subgraph_matching.py  utils.py
metric/: jaccard.py  metric_calc.py  test_complex_graph_2.json  test_single_nodes.json  test_split_node.json  tests.py  triplet_match_accuracy_calculation.ipynb  triplet_match_loss.ipynb  triplet_matching.py
metrics/: jaccard.py  tests.py  triplet_match_accuracy_calculation.ipynb  triplet_matching.py
scripts/: codestyle.py  metrics.py  test.py
src/: graph.py  model.py  prompts.py  sample_dialogue.py  utils.py
tests/: conftest.py
(+163 files in other folders)
