[tool.poetry]
name = "dff-llm-integration"
version = "0.1.0"
description = "Repository with all of the work related to Chatsky LLM-Autoconfig project"
authors = ["askatasuna <andruhabobr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chatsky_llm_autoconfig = {path = "dev_packages/chatsky_llm_autoconfig", develop = true}
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
