[tool.poetry]
name = "chatsky-llm-autoconfiguration"
version = "0.1.0"
description = "Repository with all of the work related to Chatsky LLM-Autoconfig project"
authors = ["askatasuna <andruhabobr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chatsky_llm_autoconfig = {path = "dev_packages/chatsky_llm_autoconfig", develop = true}
tqdm = "^4.66.5"
poethepoet = "^0.29.0"
pandas = "^2.2.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
nbsphinx = "*"
sphinx-favicon = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
sphinxcontrib-katex = "*"
pydata-sphinx-theme = "*"
sphinxcontrib-apidoc = "*"
sphinxcontrib-httpdomain = "*"
sphinx-autodoc-typehints = "*"
jupytext = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
isort = "*"
black = "*"
mypy = "*"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "*"

[tool.poe]
default_task_type = "script"

[tool.poe.tasks]
flake = "scripts.codestyle:_run_flake"
black = "scripts.codestyle:_run_black(modify=False)"
format = "scripts.codestyle:_run_black(modify=True)"
lint.sequence = ["flake", "black"]