[tool.poetry]
name = "chatsky_llm_autoconfig"
version = "0.1.0"
description = "This module provides functionality for automatic script creation based on dialogue description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
networkx = "^3.3"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
chatsky = "^0.8.0"
matplotlib = "^3.9.2"
langchain-community = "^0.3.1"
scipy = "*"
pydantic = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
